# safehome

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml  smoke-test.yml  unit-test.yml
backend/: Dockerfile  app.py
backend/common/: __init__.py  common.py  device.py  request.py  user.py
backend/security/: __init__.py  request.py  security.py
backend/surveillance/: __init__.py  surveillance.py
control_panel/: __init__.py  control_panel.py  control_panel_abstract.py
device/: device_camera.py  device_control_panel_abstract.py  device_motion_detector.py  device_sensor_tester.py  device_windoor_sensor.py  interface_camera.py  interface_sensor.py  safehome_sensor_test.py  safehome_sensor_test_gui.py  safehome_sensor_tester.py
example/: example_all_sensors.py  example_camera.py  example_control_panel.py
frontend/: __init__.py  api_client.py  common_api_client.py  configuration_panel.py  login_window.py  main.py  main_dashboard.py  notification_dialog.py  reconfirm_dialog.py  safety_zone_dialog.py  security_api_client.py  security_panel.py  sensor_panel.py  surveillance_api_client.py  surveillance_panel.py
frontend/tests/: test_common_api_client.py  test_configuration_panel.py  test_login_window.py  test_main.py  test_main_dashboard.py  test_safety_zone_dialog.py  test_security_api_client.py  test_security_panel.py  test_security_panel_additional.py  test_sensor_panel.py  (+2 more)
(+8 files in other folders)
